<resources>
    <string name="app_name">Pibble</string>
    <string name="facebook_app_id">373784113542765</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="loginIn">Log In</string>
    <string name="forgotpassword">Forgot Password?</string>
    <string name="cancel">Cancel</string>
    <string name="upvote">Upvote</string>
    <string name="prb">PRB</string>
    <string name="pgb">PGB</string>
    <string name="pib">PIB</string>
    <string name="eth">ETH</string>
    <string name="btc">BTC</string>
    <string name="termsButton">By signing up you agree to our Terms &amp; Privacy Policy</string>
    <string name="signinBottom">Don\'t have an account?</string>
    <string name="signUpBottom">Already have an account?</string>
    <string name="phoneVerify_screen_phoneNumber">Phone Number</string>
    <string name="phoneVerify_screen_verification">Verification</string>
    <string name="phoneVerify_screen_code">Code</string>
    <string name="phoneVerify_screen_next">Next</string>
    <string name="verifyCode_screen_title">Verify Email</string>
    <string name="verifyCode_screen_firstText">Please check your SMS. We just\nsend a verification code to:</string>
    <string name="verifyCode_enter_verify_code">Enter Verify Code</string>
    <string name="emailVerifyCode_screen_Text1">Check your email with verification code.</string>
    <string name="emailVerifyCode_screen_Text2">Please enter the code below.</string>
    <string name="forgotPassword_screen_title">Forgot Password</string>
    <string name="forgotPassword_screen_firstText">Select the contact details we\nshould use to reset your password.</string>
    <string name="forgotPassword_screen_viaSMS">Via SMS</string>
    <string name="forgotPassword_screen_viaEmail">Via Email</string>
    <string name="forgotPassword_screen_phone_verify">Verify Phone</string>
    <string name="forgotPassword_sent_code">We\'ve just sent a recovery code for\npassword reset to</string>
    <string name="forgot_email_screen_firstText">Enter your email address below\n&amp; we\'ll send you a secure link to\nreset your password</string>
    <string name="forgot_email_screen_reset">Reset Password</string>
    <string name="forgot_email_screen_done">Done</string>
    <string name="forgot_emailsent_screen_firstText">We just sent an email to</string>
    <string name="forgot_emailsent_screen_secondText">Use the recovery code we\'ve sent\nyou to reset your password.</string>
    <string name="resetpassword_screen_title">Password Reset</string>
    <string name="resetpassword_screen_content">Enter your new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="password_reset_successful_1">Password Reset</string>
    <string name="password_reset_successful_2">Successful</string>
    <string name="password_reset_successful_3">You have successfully reset your password.\nPlease use your new password \nwhen logging in.</string>
    <string name="api_loading">loading...</string>
    <string name="network_connection">Network is disabled.</string>
    <string name="server_error">Server Error</string>
    <string name="server_response_error">Invalid API response</string>
    <string name="invalid_account">Invalid account</string>
    <string name="set_new_password_ok">New Password Changed!</string>
    <string name="dialog_login_failed">Log in failed!</string>
    <string name="btn_follow">FOLLOW</string>
    <string name="btn_following">FOLLOWING</string>
    <string name="hint_addcomment">Add a comment...</string>
    <string name="wallet_title">PIB WALLET</string>
    <string name="wallet_passcode_register">Register PIN to access wallet</string>
    <string name="wallet_passcode_confirm">Confirm new PIN</string>
    <string name="wallet_passcode_uplock">Unlock with your PIN</string>
    <string name="wallet_qrscan">QR Scanner</string>
    <string name="wallet_qraddress_request_from_friends">Request from friends</string>
    <string name="wallet_qraddress_copy_address">Copy address</string>
    <string name="wallet_qraddress_Share">Share</string>
    <string name="wallet_home_title">Pibble Wallet</string>
    <string name="wallet_paybill_title">Pay Bill</string>
    <string name="wallet_sendpib">Send PIB</string>
    <string name="wallet_sendamount">Send Amount</string>
    <string name="wallet_exchange_title">Exchange PIB</string>
    <string name="wallet_Activity_title">Activity</string>
    <string name="home_upvote">Upvote</string>
    <string name="comment_title">Comments</string>
    <string name="done">Done</string>
    <string name="post">Post</string>
    <string name="description">Description</string>
    <string name="location">Pick location</string>
    <string name="location_title">Set Location</string>
    <string name="tag">Pick tag</string>
    <string name="tag_title">Set Tag</string>
    <string name="promote">Promotion</string>
    <string name="promote_title">Set Promotion</string>
    <string name="promote_subtitle">How much budget do you set for the promotion?</string>
    <string name="promote_yourstate">Your promotional budget has been set at 20,000 PIB. Your media will reach about 5,000 people.</string>
    <string name="promote_currentpib">Your current PIB Token Balance is</string>
    <string name="promote_water">Select user\'s activity to be red-brush rewarded</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="permission_contacts_rationale">Contacts permissions are needed to demonstrate access to the contacts database.</string>
    <string name="permission_camera_denied">Camera permission was denied. Please consider granting it in order to access the camera!</string>
    <string name="permission_camera_never_askagain">Camera permission was denied with never ask again.</string>
    <string name="no_files_found">No Files Found</string>
    <string name="all_images">All Images</string>
    <string name="next">Next</string>
    <string name="charity_state">You can always change your goal amount later. If you\'re not sure where to start, most campaigns have a goal of  100000.00 PIB</string>
    <string name="charity_individual_content">I am the sole organizer.\nYou can turn on as a Team fundraising later</string>
    <string name="charity_team_content">I will invite others to fundraise with me</string>
    <string name="about_me">About me</string>
    <string name="term_service">I understand and agree that I am solely responsible for my own Content and the consequences of posting or publishing it.</string>
    <string name="tag_add">Add Tag</string>
    <string name="auth_emailverify_content">Please enter the verification code\nwe e-mailed to</string>
    <string name="button_continue">Continue</string>
    <string name="button_resend_code">Resend code</string>
    <string name="button_change_e_mail_address">Change e-mail address</string>
    <string name="email">Email</string>
    <string name="button_next">Next</string>
    <string name="auth_forgot_pin">Forgot PIN</string>
    <string name="auth_forgot_pin_content">Select the contact details we should \nuse to reset your PIN</string>
    <string name="or">or</string>
    <string name="auth_phone">phone</string>
    <string name="auth_your_nickname">Your Nickname</string>
    <string name="auth_one_special_character">One special character</string>
    <string name="auth_one_number">One number</string>
    <string name="auth_one_uppercase_character">One uppercase character</string>
    <string name="auth_8_characters_minimum">8 characters minimum</string>
    <string name="digitalgoods_message_to">Message to...</string>
    <string name="digitalgoods_post_commerce">Post Commerce</string>
    <string name="button_post">Post</string>
    <string name="posts">posts</string>
    <string name="related">Related :</string>
    <string name="create_campagin">Create campagin</string>
    <string name="enter_your_goal_here">Enter your rasing goal here</string>
    <string name="add_campaign_title">Add Campaign Title</string>
    <string name="who_are_you_rasing_funds_for">Who are you rasing funds for?</string>
    <string name="choose_a_category">Choose a category</string>
    <string name="fundraise_as">Fundraise as:</string>
    <string name="an_individual">An Individual</string>
    <string name="an_team">An Team</string>
    <string name="enter_your_team_name">Enter your team name</string>
    <string name="upload_your_team_logo_image">Upload your team logo image</string>
    <string name="i_love_it_i_will">I love it! I will</string>
    <string name="donate">Donate</string>
    <string name="for_your_campaign">for your campaign.</string>
    <string name="min">MIN</string>
    <string name="max">MAX</string>
    <string name="edit_caption">Edit Caption</string>
    <string name="pib_reward">PIB Reward</string>
    <string name="raised">Raised</string>
    <string name="goal">Goal</string>
    <string name="contribute">Contribute</string>
    <string name="team">Team:</string>
    <string name="members">Members:</string>
    <string name="join">JOIN</string>
    <string name="write_a_caption">Write a caption...</string>
    <string name="all_photos">All Photos</string>
    <string name="for_your_posting">for your posting.</string>
    <string name="brush">BRUSH</string>
    <string name="more">MORE</string>
    <string name="you_can_increase_your_balance_at_wallet">You can increase your balance at Wallet.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="web_site">Web site</string>
    <string name="hashtags">HashTags</string>
    <string name="commerce">COMMERCE</string>
    <string name="crowd_funding">CROWD FUNDING</string>
    <string name="album">ALBUM</string>
    <string name="event">EVENT</string>
    <string name="log_out">LOG OUT</string>
    <string name="notifications">NOTIFICATIONS</string>
    <string name="pibble">PIBBLE</string>
    <string name="blockchain_apps">Blockchain Apps</string>
    <string name="no_brush_activity">No Brush Activity</string>
    <string name="no_brush_cotent">You don\'t have any reward or upvote activitis using red or green brushes.</string>
    <string name="max_small">max</string>
    <string name="request">Request</string>
    <string name="we_ve_just_sent_a_recovery_code_to">We\'ve just sent a recovery code to</string>
    <string name="available_balance">Available Balance</string>
    <string name="pay_bill">Pay</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="exchange">Exchange</string>
    <string name="activity">Activity</string>
    <string name="market">Market</string>
    <string name="back">Back</string>
    <string name="forgot_your_pin">Forgot your PIN?</string>
    <string name="pib_request">PIB Request</string>
    <string name="confirm">Confirm</string>
    <string name="share">Share</string>
    <string name="reach_more_people">Reach More People</string>
    <string name="dialog_promotion_explain1">Do you want to promote your post to\npeople who do not follow you?</string>
    <string name="dialog_promotion_explain2">Do you want to increase your reach to\nmore people?</string>
    <string name="dialog_promotion_explain3">Just your touching the button,\nwe\'ll automatically promote your posts</string>
    <string name="dialog_promotion_explain4">You can pause your promotion\nanytime.</string>
    <string name="create_promotion">Create Promotion</string>
    <string name="your_pib_balance">Your PIB balance :</string>
    <string name="pibble_lower">Pibble</string>
    <string name="get_started">Get started</string>
    <string name="set_reward">Set Reward</string>
    <string name="min_100_pib_max_100_000_pib">Min.100 PIB ~ Max.100,000 PIB</string>
</resources>