<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/reset_check" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/password_reset_successful_1"
                android:textSize="17sp"
                android:gravity="center"
                android:textColor="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_reset_successful_2"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/password_reset_successful_3"
                android:gravity="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayoutBottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="25dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:background="@drawable/btn_sign"
            android:text="@string/loginIn"
            android:textColor="@color/colorMain" />

    </FrameLayout>

</RelativeLayout>
