<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txt_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Easy and Fast. Share your life"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_action"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="60dp"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_started"
            android:layout_width="wrap_content"
            android:layout_height="42dp"
            android:paddingLeft="28dp"
            android:paddingRight="28dp"
            android:gravity="center"
            android:background="@drawable/linear_corner_24_maincolor">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/get_started"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/pibble_lower"
            android:textSize="13sp"
            android:textColor="@color/black"/>

    </LinearLayout>

</RelativeLayout>
